[gd_scene load_steps=3 format=3 uid="uid://ckvx5qx2415nh"]

[ext_resource type="Script" uid="uid://btv2i002guu08" path="res://scenes/ui/SeasonScreen.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2"]

[node name="SeasonScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 1)

[node name="TopPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="SeasonEnd" type="Label" parent="TopPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Season ends: 2026-02-01"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Leaderboards" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Categories" type="HBoxContainer" parent="TabContainer/Leaderboards"]
layout_mode = 2

[node name="LevelButton" type="Button" parent="TabContainer/Leaderboards/Categories"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Seviye"

[node name="PowerButton" type="Button" parent="TabContainer/Leaderboards/Categories"]
layout_mode = 2
toggle_mode = true
text = "Güç"

[node name="PvPButton" type="Button" parent="TabContainer/Leaderboards/Categories"]
layout_mode = 2
toggle_mode = true
text = "PvP Rating"

[node name="GoldButton" type="Button" parent="TabContainer/Leaderboards/Categories"]
layout_mode = 2
toggle_mode = true
text = "Altın"

[node name="GuildButton" type="Button" parent="TabContainer/Leaderboards/Categories"]
layout_mode = 2
toggle_mode = true
text = "Lonca Gücü"

[node name="MyRank" type="Label" parent="TabContainer/Leaderboards"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Your Rank: #0"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Leaderboards"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Leaderboards/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BattlePass" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="TabContainer/BattlePass"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Battle Pass Progress"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "◀ Geri"
